# workshop_ai_agent

./: README.md  anotacoes.txt  anotacoes_aula.txt  pyproject.toml
02-frameworks/: agno_starter.py  langchain_langgraph_starter.py
03-prompt-engineering/: tecnica_avancada.py  tecnica_basica.py
04-RAG/: RAG_pipeline.py  chunking-example.py  context_enrichment.py
04-RAG/db/climate_vectorstore/: chroma.sqlite3
06-MCP-A2A/: crewai_mcp_agent.py  lang_mcp_agent.py
