[project]
name = "workshop-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.14,>=3.10"
dependencies = ["ollama (>=0.6.0,<0.7.0)", "autogen (>=0.10.0,<0.11.0)", "ag2[openai] (>=0.10.0,<0.11.0)", "agent (>=0.1.3,<0.2.0)", "agno (>=2.2.10,<3.0.0)", "crewai (>=1.4.1,<2.0.0)", "litellm (>=1.79.3,<2.0.0)", "langgraph (>=1.0.2,<2.0.0)", "langchain-ollama (>=1.0.0,<2.0.0)", "langchain (>=1.0.5,<2.0.0)", "langchain-core (>=1.0.4,<2.0.0)", "langchain-community (>=0.4.1,<0.5.0)", "langchain-chroma (>=1.0.0,<2.0.0)", "sentence-transformers (>=5.1.2,<6.0.0)"]
